@@ -1,0 +1,212 @@
+; $Id: ja-JP.ini 
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+JERROR_PARSING_LANGUAGE_FILE="言語ファイル %1$s は正しく読み込まれませんでした。: エラー行番号 %2$s"
+
+;Stepbar
+INSTL_STEPS_TITLE="ステップ"
+INSTL_STEP_1_LABEL="1 : ランゲージ"
+INSTL_STEP_2_LABEL="2 : インストール前の確認"
+INSTL_STEP_3_LABEL="3 : ライセンス"
+INSTL_STEP_4_LABEL="4 : データベース"
+INSTL_STEP_5_LABEL="5 : FTP設定"
+INSTL_STEP_6_LABEL="6 : 設定"
+INSTL_STEP_7_LABEL="7 : 完了"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="言語の選択"
+INSTL_SELECT_LANGUAGE_DESC="Joomla!のインストールに使用する言語を選択してください:"
+INSTL_LANGUAGE_TITLE="言語を選択してください"
+INSTL_WARNJAVASCRIPT="警告！Joomla!を適切にインストールするにはJavaScriptを有効にする必要があります。"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="インストール前の確認"
+INSTL_PRECHECK_FOR_VERSION="インストール前の確認 for %s:"
+INSTL_PRECHECK_DESC="これらの(<strong class="_QQ_"red"_QQ_">いいえ</strong>でマークされた)項目がサポートされていない場合、まずそれを修正してください。未修正のままではJoomla!のインストールが正常に機能しない可能性があります。"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="推奨設定:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="これらの設定はJoomla!の完全な互換性を確保するための推奨PHP設定です。<br />あなたの設定が推奨設定と完全に一致していなくても、Joomla!は動作するでしょう。"
+INSTL_PRECHECK_DIRECTIVE="ディレクティブ"
+INSTL_PRECHECK_RECOMMENDED="推奨"
+INSTL_PRECHECK_ACTUAL="現在"
+
+; Database view
+INSTL_DATABASE="データベース設定"
+INSTL_DATABASE_HOST_DESC="通常は &quot;localhost&quot; です"
+INSTL_DATABASE_HOST_LABEL="ホスト名"
+INSTL_DATABASE_NAME_DESC="いくつかのホストではサイトごとに一定のデータベース名のみ許可されている場合があります。この場合、Joomla!サイトを区別するためにテーブルプレフィックスを使用します。"
+INSTL_DATABASE_NAME_LABEL="データベース名"
+INSTL_DATABASE_OLD_PROCESS_DESC="以前のJoomla!インストールは任意の既存のバックアップテーブルに置き換えられます"
+INSTL_DATABASE_OLD_PROCESS_LABEL="古いデータベースの処理"
+INSTL_DATABASE_PASSWORD_DESC="サイトのセキュリティのため、mysqlアカウントにパスワードを使用することは必須です"
+INSTL_DATABASE_PASSWORD_LABEL="パスワード"
+INSTL_DATABASE_PREFIX_DESC="データベースプレフィックスを選択します。理想的には3〜4文字、英数字のみを含み、アンダースコアで終わらなければなりません。 &quot;bak_&quot; はバックアップテーブルに使用されるため、使用しないでください。"
+INSTL_DATABASE_PREFIX_LABEL="テーブルプレフィックス"
+INSTL_DATABASE_TYPE_DESC="これはおそらく &quot;mysql&quot; です"
+INSTL_DATABASE_TYPE_LABEL="データベースタイプ"
+INSTL_DATABASE_USER_DESC=" "_QQ_"root"_QQ_" またはホストによって指定されたユーザ名のどちらかです"
+INSTL_DATABASE_USER_LABEL="ユーザ名"
+INSTL_DATABASE_TITLE="接続設定"
+INSTL_DATABASE_DESC="<p>サーバ上で実行するJoomla!の設定のための4つの簡単なステップは...</p><p>Joomla!をインストールするサーバのホスト名を入力してください。</p><p>Joomla!で使用するMySQLユーザ名、パスワードそしてデータベース名を入力してください。</p><p>このJoomla!インストールのテーブルに使用するプレフィックスを入力してください。以前のインストールで作成した既存テーブルをどう処理するか選択してください。</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="FTPパスを自動検出"
+INSTL_FTP="FTP設定"
+INSTL_FTP_DESC="<p>いくつかのサーバではインストールを完了するためにFTP情報を提供する必要があります。これらの情報なしでのインストール完了が困難な場合、これが必要かどうかをホストに確認して判断してください。</p><p>セキュリティ上の理由で、ウェブサーバ全体でなくJoomla!インストール用のみでアクセスするための、別のユーザアカウントを作成することが最適です。あなたのホストがこの作業をアシストできます。</p><p><b>注:</b> Windowsサーバの場合はFTPの設定は必要<strong>ありません</strong>。</p>"
+INSTL_FTP_ENABLE_LABEL="FTPレイヤの有効"
+INSTL_FTP_HOST_LABEL="FTPホスト"
+INSTL_FTP_PASSWORD_LABEL="FTPパスワード"
+INSTL_FTP_PORT_LABEL="FTPポート"
+INSTL_FTP_ROOT_LABEL="FTPルートパス"
+INSTL_FTP_SAVE_LABEL="FTPパスワードの保存"
+INSTL_FTP_TITLE="FTP設定 (<strong class="_QQ_"red"_QQ_">オプション - ほとんどのユーザーは、このステップをスキップすることができます - 次へを押してスキップ</strong>)"
+INSTL_FTP_USER_LABEL="FTPユーザ名"
+INSTL_SITE_NAME_LABEL="サイト名"
+INSTL_VERIFY_FTP_SETTINGS="FTP設定を確認する"
+INSTL_FTP_SETTINGS_CORRECT="設定は正常です"
+INSTL_FTP_USER_DESC="警告！これは空白のままにして、ファイル転送のたびにFTPユーザ名を入力することをお勧めします。"
+INSTL_FTP_PASSWORD_DESC="警告！これは空白のままにして、ファイル転送のたびにFTPパスワードを入力することをお勧めします。"
+
+;Site View
+INSTL_SITE="メイン設定"
+INSTL_ADMIN_EMAIL_LABEL="あなたのメールアドレス"
+INSTL_ADMIN_PASSWORD_LABEL="管理者パスワード"
+INSTL_ADMIN_PASSWORD2_LABEL="管理者パスワードの確認"
+INSTL_ADMIN_USER_LABEL="管理者ユーザ名"
+INSTL_SITE_NAME_TITLE="サイト名"
+INSTL_SITE_META_ADVANCED_SETTINGS="詳細設定 - オプション"
+INSTL_SITE_NAME_DESC="あなたのJoomla!サイトの名前を入力してください。"
+INSTL_SITE_METADESC_LABEL="メタ概要"
+INSTL_SITE_METADESC_TITLE_LABEL="検索エンジンによって使用されるウェブサイト全体の説明を入力します。一般的に、最大20ワードが最適です。"
+INSTL_SITE_METAKEYS_LABEL="メタキーワード"
+INSTL_SITE_METAKEYS_TITLE_LABEL="あなたのウェブサイトを説明するのに最適ななキーワードやフレーズを入力します。キーワードは紺まで区切り、フレーズのまとまりはシングルクウォートで区切ります。"
+INSTL_SITE_CONF_TITLE="管理者メールアドレスとパスワードを確認してください。"
+INSTL_SITE_CONF_DESC="メールアドレスを入力してください。これはウェブサイトの最高管理者のメールアドレスになります。<br />新しいパスワードを入力して、確認のために再入力します。 <strong>管理者</strong>のデフォルトユーザ名を変更できます。これらはインストール後の管理者コントロールパネルへのログインに使用するユーザ名とパスワードになります。<br />サイト移行の場合、このセクションは無視して構いません。現在の設定が自動的に移行されます。"
+INSTL_SITE_LOAD_SAMPLE_TITLE="サンプルデータの取得"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>重要！</strong>: Joomla！初心者はサンプルデータのインストールを強くお勧めします。次のステージに移動する<i>前に</i>ボタンをクリックしてインストールしてください。"
+INSTL_SITE_LOAD_SAMPLE_DESC2="インストール作業を離れる前に、サイトデータベースを読み込むことができます。これには3つの方法があります:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. デフォルトのサンプルデータを</strong>挿入することができます。挿入するには、デフォルトの英語(GB)サンプルデータがドロップダウン内で表示されていることを確認し、サンプルデータの取得ボタンをクリックします。"
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. カスタムサンプルデータを</strong>挿入することができます。挿入するには、ドロップダウン内で利用出来るサンプルデータを選び、サンプルデータの取得ボタンをクリックします。"
+INSTL_SITE_LOAD_SAMPLE_DESC5="<strong>2a. Joomla! 1.6.x と互換性のあるSQLスクリプトファイル</strong>をlocalhostからアップロードし、サイト上で実行することができます。これはローカライズされたサンプルデータをインストールしたり、Joomla! 1.5.x バックアップを復元することができます。スクリプトは正しいテーブルプレフィックスで、UTF-8でエンコードされ、Joomla! 1.5.x のデータベーススキーマに準拠している必要があります。"
+INSTL_SITE_LOAD_SAMPLE_DESC6="<strong>2b. Joomla！の以前のバージョンからコンテンツを移行します。</strong>移行スクリプトの読み込みオプションを選択して、古いJoomla！1.0.xバージョンのデータベースダンプを新しいJoomla！1.5.xサイトへ移行させるサポートを有効にします。必要な変換はオンザフライで実行され、移行スクリプトファイルは古いサイトに<code>com_migrator</code>コンポーネントを使用して作成されます。<br />コンポーネントと移行手順の詳細については<a href="_QQ_"http://docs.joomla.org/Migrating_from_1.0.x_to_1.5_Stable"_QQ_" target="_QQ_"blank"_QQ_">Joomla! 1.5 移行ガイド</a>を参照ください。"
+INSTL_SITE_LOAD_SAMPLE_DESC7="非圧縮SQLスクリプトファイル、zip圧縮やgz圧縮されたスクリプトファイルをアップロードすることができます。圧縮されたファイルにはSQLスクリプトファイルを1つだけ含むことができます。ファイルが大きすぎて扱えないまたはメモリやタイムリミットエラーを引き起こす場合、非圧縮ファイルを /installation/sql/migration/ フォルダにアップロードしてください。それを<code>migrate.sql</code>にリネームし、 "_QQ_"I have already uploaded..."_QQ_" オプションにチェックを入れてください。<br />"
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>3. クリーンインストール</strong>: クリーンインストールを実行したい場合、サイト名、管理者メールアドレスを入力し、パスワードを選択します。そして<em>次へ</em>をクリックして最終ステップへ進みます。"
+INSTL_SITE_SAMPLE_LABEL="サンプルデータセット"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="サンプルデータのインストール"
+INSTL_SITE_INSTALL_SAMPLE_DESC="サンプルデータのインストールは初心者には強くお勧めします。Joomla！インストールパッケージに含まれているサンプルコンテンツをインストールします。"
+INSTL_SITE_SAMPLE_LOADED="サンプルデータのインストール完了"
+INSTL_SAMPLE_DATA_SET="デフォルトの英語(GB)サンプルデータ"
+
+;Complete view
+INSTL_COMPLETE="完了"
+INSTL_COMPLETE_TITLE="おめでとうございます！Joomla!がインストールされました。"
+INSTL_COMPLETE_DESC1="Joomla!ウェブサイトを見るにはサイトボタンをクリック、または管理者ログインへ進むには管理ボタンをクリックしてください。"
+INSTL_COMPLETE_DESC2="Joomla!ヘルプサイトでは、Joomla!にあなたにあったランゲージパックをインストールするための簡単な、ステップバイステップガイドや利用可能なランゲージパックへのリンク一覧が見つかるでしょう。"
+INSTL_COMPLETE_DESC3="右のボタンをクリックして新規ウィンドウでヘルプサイトを開きます。"
+INSTL_COMPLETE_REMOVE_INSTALLATION="必ず忘れずに完全に<br />installationディレクトリを削除してください。<br />installationディレクトリが削除されるまでは、これ以降続行できなくなります。これはJoomla!のセキュリティ機能です。"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="管理者ログイン情報"
+INSTL_COMPLETE_LANGUAGE_1="Joomla!にあなたの言語を追加しますか？"
+INSTL_COMPLETE_LANGUAGE_2="詳細とダウンロードはJoomla!ヘルプサイトを訪問ください。"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="データベースに接続できませんでした。コネクタから返された番号: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="データベースのバックアップ中にいくつかのエラーが発生しました。"
+INSTL_DATABASE_ERROR_CREATE="データベース %s を作成中にエラーが発生しました。<br />ユーザーがデータベースを作成する十分な特権を持っていない場合があります。必要なデータベースは、Joomla!をインストールする前に別に作成する必要があります。"
+INSTL_DATABASE_ERROR_DELETE="データベースの削除中にいくつかのエラーが発生しました。"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="削除"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="バックアップ"
+INSTL_DATABASE_FIX_TOO_LONG="The MySQLテーブルのプレフィックスは最大15文字まで入力できます。"
+INSTL_DATABASE_INVALID_DB_DETAILS="提供されたデータベース情報に誤りがあるか、または空です。"
+INSTL_DATABASE_INVALID_MYSQL_VERSION="インストールを続行するにはMySQL 5.0.4 またはそれ以上が必要です。お使いのバージョンは %s です。"
+INSTL_DATABASE_INVALID_TYPE="データベースの種類を選択してください"
+INSTL_DATABASE_NAME_TOO_LONG="MySQLデータベース名は最大64文字まで入力できます。"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="MySQLテーブルのプレフィックスは文字で始まる必要があり、そのあと文字、数字またはアンダースコアのみで続けて記述します。"
+INSTL_DATABASE_INVALID_NAME="MySQLの5.1.6以前のバージョンはピリオドまたはその他の "_QQ_"特殊"_QQ_" 文字を含めることはできません。お使いのバージョンは %s です。"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQLデータベース名とテーブル名は先頭や末尾にスペースを入れることはできません。"
+INSTL_DATABASE_NAME_INVALID_CHAR="MySQLの識別子にnull文字のASCII(0x00)を含めることはできません。"
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="ファイル %s は存在しません"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="お使いのブラウザのクッキーが無効になっているようです。クッキーが無効のままではアプリケーションをインストールできなくなります。また、サーバの<strong>session.save_path</strong>に問題がある可能性があります。この場合、自分自身でどのようにチェックまたは修正するかわからない場合はホスティングプロバイダにご相談ください。"
+INSTL_HEADER_ERROR="エラー"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla!ウェブインストーラ"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="データベースに接続できませんでした。コネクタから返された番号: %s"
+INSTL_STD_OFFLINE_MSG="このサイトはメンテナンスのためサービスを一時停止しています。<br />しばらくしてから再度ご確認ください。"
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="指定したFTPディレクトリはこのJoomla!インストールのディレクトリではありません"
+INSTL_FTP_NOCONNECT="FTPサーバに接続できませんでした"
+INSTL_FTP_NODELE="The function "_QQ_"DELE"_QQ_" 失敗しました。"
+INSTL_FTP_NODIRECTORYLISTING="FTPサーバからディレクトリ一覧を取得できませんでした。"
+INSTL_FTP_NOLIST="The function "_QQ_"LIST"_QQ_" 失敗しました。"
+INSTL_FTP_NOLOGIN="FTPサーバにログインできませんでした。"
+INSTL_FTP_NOMKD="The function "_QQ_"MKD"_QQ_" 失敗しました。"
+INSTL_FTP_NONLST="The function "_QQ_"NLST"_QQ_" 失敗しました。"
+INSTL_FTP_NOPWD="The function "_QQ_"PWD"_QQ_" 失敗しました。"
+INSTL_FTP_NORETR="The function "_QQ_"RETR"_QQ_" 失敗しました。"
+INSTL_FTP_NORMD="The function "_QQ_"RMD"_QQ_" 失敗しました。"
+INSTL_FTP_NOROOT="指定したFTPディレクトリにアクセスできませんでした。"
+INSTL_FTP_NOSTOR="The function "_QQ_"STOR"_QQ_" 失敗しました。"
+INSTL_FTP_NOSYST="The function "_QQ_"SYST"_QQ_" 失敗しました。"
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="FTPルートフォルダを自動検出できません。"
+
+;others
+INSTL_ADVANCED_SETTINGS="詳細設定"
+INSTL_BASIC_SETTINGS="基本設定"
+INSTL_CONFPROBLEM="configurationファイルあるいはディレクトリが書き込み可能でないか、またはconfigurationファイルの生成中に問題が起きました。手動で次のコードをアップロードする必要があります。テキストエリアをクリックしてすべてのコードを選択状態にし、新規テキストファイルに貼り付けます。このファイル名を'configuration.php'とし、サイトのルートフォルダにアップロードします。"
+INSTL_DISPLAY_ERRORS="Display Errors"
+INSTL_ERROR_DB="データベースの作成中にいくつかのエラーが発生しました: %s"
+INSTL_FILE_UPLOADS="File Uploads"
+INSTL_GNU_GPL_LICENSE="GNU一般公衆利用許諾契約"
+INSTL_INSTALLATION="のインストール"
+INSTL_LICENSE="ライセンス"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON Support"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB Language is Default"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload Off"
+INSTL_MYSQL_SUPPORT="MySQL Support"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstring language がneutralに設定されていません。これはローカルで <code>.htaccess</code> ファイルに <strong>php_value mbstring.language neutral</strong> を入力追加して設定できます。"
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstring function overload が有効になっています。これはローカルで <code>.htaccess</code>ファイルに <strong>php_value mbstring.func_overload 0</strong> と入力追加してオフにできます。"
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />このままインストールを続行すると最後に設定内容が表示されます。手動でコードをアップロードする必要があります。テキストエリアをクリックしてすべてのコードを選択状態にし、新規テキストファイルに貼り付けます。このファイル名を'configuration.php'とし、サイトのルートフォルダにアップロードします。"
+INSTL_OUTPUT_BUFFERING="Output Buffering"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser Support"
+INSTL_PHP_VERSION="PHPのバージョン"
+INSTL_REGISTER_GLOBALS="Register Globals"
+INSTL_SAFE_MODE="Safe Mode"
+INSTL_SESSION_AUTO_START="Session Auto Start"
+INSTL_WRITABLE="書き込み可能"
+INSTL_XML_SUPPORT="XML Support"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib Compression Support"
+
+;Global strings
+JADMINISTRATOR="管理者"
+JADVANCED="詳細"
+JCHECK_AGAIN="再チェック"
+JERROR="エラー"
+JGLOBAL_ISFREESOFTWARE="%s は<a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>に準拠して配布されているフリーソフトウェアです。"
+JINVALID_TOKEN="無効なセキュリティトークンが含まれているため、最新の要求が拒否されました。ページを更新してもう再度お試しください。"
+JNEXT="次へ"
+JNO="いいえ"
+JOFF="オフ"
+JON="オン"
+JPREVIOUS="前へ"
+JSITE="サイト"
+JUSERNAME="ユーザ名"
+JYES="はい"
+
+; Framework strings necessary when no lang pack is available
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="次の欄は入力必須です: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="無効なフィールドです: %"
+
+;Necessary for errors
+ADMIN_EMAIL="あなたのメールアドレス"
+ADMIN_PASSWORD="管理者パスワード"
+ADMIN_PASSWORD2="管理者パスワードの再確認"
+SITE_NAME="サイト名"
