@@ -43,6 +43,7 @@ $ -> Language fix or change
 08-Jan-2011 Jean-Marie Simonet
  $ [#24181] Strings mixed up for com_users. Thanks Rouven.
  $ Correcting some installation langs
+ $ Adding ja-JP to installation langs
 
 07-Jan-2011 Mark Dexter
 # [#24106] onContentBeforeSave() and onContentAfterSave() do not work in the backend.
